--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "framer-motion": "^12.4.3",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.475.0",
+    "mongodb": "^6.13.1",
     "next": "15.1.7",
     "next-navigation": "^1.0.6",
     "react": "^19.0.0-rc.1",
