--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
     "recharts": "^2.15.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
